# Windows-MCP

./: pyproject.toml
src/windows_mcp/: __main__.py
src/windows_mcp/desktop/: service.py
src/windows_mcp/tree/: config.py  service.py
